--- a/app/root.css
+++ b/app/root.css
@@ -22,8 +22,6 @@
     background-color: theme('colors.primary.50');
     font-weight: 400;
     line-height: theme('lineHeight.body');
-    min-width: 100vw;
-    min-height: 100vh;
   }
 
   *[data-focused],
@@ -98,4 +96,20 @@
   .typo p {
     margin-bottom: 1rem;
   }
+  ::-webkit-scrollbar {
+    @apply w-2 rounded-lg;
+  }
+
+  ::-webkit-scrollbar-track {
+    @apply bg-primary-200;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    @apply bg-primary-700 rounded-lg;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    @apply bg-primary-700 rounded-lg;
+  }
+
 }
