--- a/app/theme.css
+++ b/app/theme.css
@@ -12,17 +12,17 @@
   --theme-primary-900: 0.11 0.11 0.11;
   --theme-primary-950: 0.059 0.059 0.059;
 
-  --theme-accent-50: 0.882 0.933 1;
-  --theme-accent-100: 0.741 0.859 1;
-  --theme-accent-200: 0.482 0.714 0.996;
-  --theme-accent-300: 0.224 0.573 0.996;
-  --theme-accent-400: 0.004 0.431 0.953;
-  --theme-accent-500: 0.004 0.318 0.706;
-  --theme-accent-600: 0.004 0.251 0.557;
-  --theme-accent-700: 0.004 0.188 0.42;
-  --theme-accent-800: 0 0.125 0.278;
-  --theme-accent-900: 0 0.063 0.141;
-  --theme-accent-950: 0 0.035 0.078;
+  --theme-accent-50: 237 100% 95.9%;
+  --theme-accent-100: 237 96.6% 88.4%;
+  --theme-accent-200: 237 95.9% 81%;
+  --theme-accent-300: 238 95.6% 73.5%;
+  --theme-accent-400: 237 96.5% 66.3%;
+  --theme-accent-500: 238 96.2% 58.8%;
+  --theme-accent-600: 237 67.5% 48.2%;
+  --theme-accent-700: 238 67.7% 37.6%;
+  --theme-accent-800: 238 66.7% 27.1%;
+  --theme-accent-900: 238 66.7% 16.5%;
+  --theme-accent-950: 237 66.7% 5.9%;
 
   --theme-negative-50: 0.992 0.89 0.89;
   --theme-negative-100: 0.984 0.8 0.796;
@@ -63,17 +63,17 @@
   --theme-primary-100: 0.11 0.11 0.11;
   --theme-primary-50: 0.059 0.059 0.059;
 
-  --theme-accent-950: 0.961 0.969 1;
-  --theme-accent-900: 0.898 0.918 1;
-  --theme-accent-800: 0.82 0.855 1;
-  --theme-accent-700: 0.722 0.773 1;
-  --theme-accent-600: 0.639 0.706 1;
-  --theme-accent-500: 0.545 0.631 1;
-  --theme-accent-400: 0.239 0.38 1;
-  --theme-accent-300: 0 0.169 0.922;
-  --theme-accent-200: 0 0.114 0.62;
-  --theme-accent-100: 0 0.055 0.302;
-  --theme-accent-50: 0 0.027 0.161;
+  --theme-accent-50: 235 100% 97.8%;
+  --theme-accent-100: 238 93.5% 93.9%;
+  --theme-accent-200: 238 96.1% 90%;
+  --theme-accent-300: 238 97.1% 86.3%;
+  --theme-accent-400: 237 95.6% 82.2%;
+  --theme-accent-500: 238 96.4% 78.4%;
+  --theme-accent-600: 238 47.3% 64.3%;
+  --theme-accent-700: 237 26.8% 50.2%;
+  --theme-accent-800: 239 26.1% 36.1%;
+  --theme-accent-900: 238 26.8% 22%;
+  --theme-accent-950: 240 25% 7.8%;
 
   --theme-negative-950: 0.992 0.89 0.89;
   --theme-negative-900: 0.984 0.8 0.796;
